# ClientHPCP

./: CMakeLists.txt  client.c  run.sh
client/: client.c
include/: client.h
server/: server_arguments.c
server/include/: server_arguments.h
